--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -50,9 +50,18 @@
             </div>
             <div *ngSwitchCase="( true )" class="tabs__tab">
                 <ul class="row row-cols-4">
-                    <li *ngFor="let product of newFavs" class="list-group-item p-2">
+                    <li *ngFor="let product of products" class="list-group-item p-2">
                         <div class="card" style="width: 18rem;">
-                            <img src={{product.image}} class="card-img-top" alt="...">
+                            <img src={{product.productImage}} class="card-img-top" alt="...">
+                            <div style="position: absolute; top:10rem; left:8rem;">
+                                <img  src='{{product.designImage}}'  width="80" height="80"  />
+                            </div>
+                            <a  style="position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                top: 0;
+                                left: 0;
+                                z-index: 1;" href="/#/product/{{product.productId}}"></a>
                         </div>
                     </li>
                 </ul>
