--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -4,14 +4,20 @@
     padding-right: 60px;
     margin-right: 60px;">
         <img src={{viewProduct.mainImage}} class="card-img-left"  alt="..." style="width: 100%;max-height: fit-content  ;">
-        <div style="position: absolute; top:10rem; left:8rem;">
+        <div *ngIf="!contains(viewProduct.type)" style="position: absolute; top:10rem; left:6rem;">
             <img  src='{{designImagePage}}'  width="80" height="80"  />
+        </div>
+        <div *ngIf="contains(viewProduct.type)" style="position: absolute; top:10rem; left:5.5rem;">
+            <img  src='{{designImagePage}}'  width="40" height="40"  />
         </div>
         <ul class="row row-cols-4" style="align-items: center;">
             <li *ngFor="let imageFuncional of imagesDesignFuncional" class="list-group-item p-2">
                 <div>
                     <img src={{imageFuncional.imageDesign}} class="card-img-top" alt="..." width="25%">
-                    <div style="position: absolute; top:1rem; left:2.2rem;">
+                    <div *ngIf="!contains(imageFuncional.type)" style="position: absolute; top:1rem; left:1.8rem;">
+                        <img  src='{{designImagePage}}'  width="10" height="10"  />
+                    </div>
+                    <div *ngIf="contains(imageFuncional.type)" style="position: absolute; top:1rem; left:1.5rem;">
                         <img  src='{{designImagePage}}'  width="10" height="10"  />
                     </div>
                     <div class="card-body"></div>
