--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -36,9 +36,21 @@
         <div #tabsContentRef class="tabs__content" [ngSwitch]="selectedTab">
             <div *ngSwitchCase="( false )" class="tabs__tab">
                 <ul class="row row-cols-4">
-                    <li *ngFor="let product of newProducts" class="list-group-item p-2">
-                        <div class="card" style="width: 18rem;">
-                            <img src={{product.image}} class="card-img-top" alt="...">
+                    <li *ngFor="let product of myProducts" class="list-group-item p-2">
+                        <div class="card" style="width: 10rem;">
+                            <img src={{product.productImage}} class="card-img-top" alt="...">
+                            <div *ngIf="!contains(product.name)" style="position: absolute; top:4rem; left:4rem;">
+                                <img  src='{{product.designImage}}'  width="40" height="40"  />
+                            </div>
+                            <div *ngIf="contains(product.name)" style="position: absolute; top:3rem; left:3rem;">
+                                <img  src='{{product.designImage}}'  width="20" height="20"  />
+                            </div>
+                            <a  style="position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                top: 0;
+                                left: 0;
+                                z-index: 1;" href="/#/product/{{product.productId}}"></a>
                         </div>
                     </li>
                 </ul>
