--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -157,7 +157,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2022 Copyright:
-      <a class="text-reset fw-bold" href="/home">SellDesign.es</a>
+      <a class="text-reset fw-bold" href="/">SellDesign.es</a>
     </div>
     <!-- Copyright -->
   </footer>
