misDiseños miPerfil y misProducgtos a medias happy path

--- a/src/app/components/mis-disenos/mis-disenos.component.html
+++ b/src/app/components/mis-disenos/mis-disenos.component.html
@@ -5,7 +5,7 @@
             <div class="card" style="width: 18rem;">
                 <img src={{product.image}} class="card-img-top" alt="..." style="padding: 2rem;">
                 <div class="card-body">
-                    <div class="card-text  d-flex">
+                    <div class="card-text  d-flex" name="nombreProducto">
                         <p>{{product.name}}</p>
                     </div>
                 <button class="btn btn-lg btn-outline-dark" (click)="openModal(0, product)">Editar</button>
