--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -2,10 +2,10 @@
     <!-- USUARIO -->
     <div class="card-body text-center">
         <label for="">
-            <img class="rounded-circle img-fluid" style="width: 150px; height: 150px;" alt="avatar" [src]="url ? url : 'https://estaticos.muyinteresante.es/uploads/images/gallery/5f96c5745bafe85c04aac28e/1-monte-everest.jpg'"> 
+            <img name="fotoAvatar" class="rounded-circle img-fluid" style="width: 150px; height: 150px;" alt="avatar" [src]="url ? url : 'https://estaticos.muyinteresante.es/uploads/images/gallery/5f96c5745bafe85c04aac28e/1-monte-everest.jpg'"> 
         </label>
-        <h5 class="mt-3" name='nombre' style="margin-left: 50rem; margin-right: 50rem;">{{this.nombre}}</h5>
-        <p class="text-muted mb-4" name='descripcion' style="margin-left: 40rem; margin-right: 40rem;">{{this.descripcion}}</p>
+        <h5 class="mt-3" name='nombre'>{{this.nombre}}</h5>
+        <p class="text-muted mb-4" name='descripcion'>{{this.descripcion}}</p>
         <div class="d-flex justify-content-center mb-2">
             <div class="btn btn-primary ms-1">
                 <input style="display: none;" id="fileInput" type='file' (change)="onSelectFile($event)" accept="image/png, image/jpg"/>
