--- a/src/app/components/mis-productos/mis-productos.component.html
+++ b/src/app/components/mis-productos/mis-productos.component.html
@@ -6,7 +6,7 @@
                 <img src={{product.image}} class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-text  d-flex">
-                        <p>{{product.type}}&nbsp;&nbsp;</p><p>{{product.price}}€</p>
+                        <p>{{product.type}} {{product.price}}€</p>
                     </div>
                     <button class="btn btn-lg btn-outline-dark" (click)="openModal(0, product)">Editar</button>
                 </div>
