--- a/src/app/components/modal-edit-product/modal-edit-product.component.html
+++ b/src/app/components/modal-edit-product/modal-edit-product.component.html
@@ -32,20 +32,20 @@
              </div>
             <div class="form-group d-flex">
                 <div class="form-group" style="float:left;justify-content: center;">
-                    <div class="nav-item dropdown" style="list-style-type: none;">
-                        <div class="nav-link dropdown-toggle" id="navbarDropdownTipo" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item dropdown" style="list-style-type: none;">
+                        <div class="nav-link dropdown-toggle" id="navbarDropdownDiseno" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
                             <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
                             </svg>
                             {{designName}} 
                         </div>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownTipo">
-                            <li *ngFor="let design of designs">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownDiseno">
+                            <div *ngFor="let design of designs">
                                 <button class="dropdown-item" (click)="asignDesign(design._id,design.name)">{{design.name}}</button>
                                 <div class="dropdown-divider"></div>
-                            </li>
+                            </div>
                         </div>                       
-                    </div>
+                    </li>
                  </div>
             </div>
              <div class="form-group d-flex">
