--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,7 +40,7 @@
     </div>
     <ul class="row row-cols-4" style="padding: 0;">
         <li  *ngFor="let product of newProducts" class="list-group-item p-2">
-            <div class="card" style="width: 18rem;"> <!-- // height: 35rem; -->
+            <a class="card" style="width: 18rem; color: inherit; text-decoration: inherit;"  href="/#/product/{{product._id}}"> <!-- // height: 35rem; -->
                 <div style="position: relative;">
                     <img src={{product.image}} class="card-img-top"  height="350"  />
                     <div *ngIf="!contains(product.type)" style="position: absolute; top:6.5rem; left:6rem;">
@@ -51,16 +51,17 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
-                    <p class="card-text"><strong name="precio">{{product.price}}</strong><strong>€</strong></p>
+                    <p class="card-text" name="identificador">{{product.type}} --- {{product.design.name}}</p>
+                    <div class="card-text"><strong name="precio">{{product.price}}</strong><strong>€</strong></div>
                 </div>
-                <a  style="position: absolute;
+                <!-- <a  style="position: absolute;
                 width: 100%;
                 height: 100%;
                 top: 0;
                 left: 0;
-                z-index: 1;" href="/#/product/{{product._id}}"></a>
-            </div>
+                z-index: 1;" href="/#/product/{{product._id}}"></a> -->
+
+            </a>
         </li>
     </ul>
     
