--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -57,7 +57,7 @@
                 [ngClass]="{ 'heart-animation-1': !viewProduct.favourite,
                             'heart-animation-2 liked': viewProduct.favourite }"
                 (click)="actualizarFavorito()" style="display: inline-block;">
-            <i class="like-icon"></i> <ng-content></ng-content>
+            <i class="like-icon"></i>
         </button>
         <div *ngIf=cart class="alert alert-success" role="alert" style="margin: 1em; margin-left: 47%; width: 70%;">
             <p>Producto añadadido al carrito correctamente!</p>
