--- a/src/app/components/mis-productos/mis-productos.component.html
+++ b/src/app/components/mis-productos/mis-productos.component.html
@@ -3,7 +3,24 @@
     <ul class="row row-cols-4" style="padding: 0;">
         <li  *ngFor="let product of newProducts" class="list-group-item p-2">
             <div class="card" style="width: 18rem;">
-                <img src={{product.image}} class="card-img-top" alt="...">
+                <div>
+                    <img src={{product.image}} class="card-img-top" alt="...">
+                    <div *ngIf="!contains(product.type)" style="position: absolute; top:4rem; left:7rem;">
+                        <img  src='{{product.design.image}}'  width="60" height="60"  />
+                        
+                    </div>
+                    <div *ngIf="contains(product.type)" style="position: absolute; top:7rem; left:5.5rem;">
+                        <img  src='{{product.design.image}}'  width="40" height="40"  />
+                    </div>
+                    <a  style="position: absolute;
+                    width: 100%;
+                    height: 70%;
+                    top: 0;
+                    left: 0;
+                    z-index: 1;" href="/#/product/{{product._id}}"></a>
+                </div>
+                
+                
                 <div class="card-body">
                     <div class="card-text  d-flex">
                         <p>{{product.type}} {{product.price}}€</p>
