padding incorporado a carrito

--- a/src/app/components/mi-carrito/mi-carrito.component.html
+++ b/src/app/components/mi-carrito/mi-carrito.component.html
@@ -1,5 +1,5 @@
 <div class="container p-1 " style="display:inline-block">
-    <div class="" name="textoCarrito">
+    <div class="" name="textoCarrito" style="padding-left:50px;padding-top: 20px;">
         <div *ngIf=!noHayProductos style="height:  5rem;">
             <h2>Mi <strong>CARRITO:</strong></h2> 
         </div>
